syntax = "proto3";

option csharp_namespace = "AccountService.Grpc";
package account;

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply);
  rpc GetAccount (GetAccountRequest) returns (ReturnAccountReply);
  rpc UpdateUsername (UpdateUsernameRequest) returns (SuccessfulChangeReply);
  rpc UpdatePassword (UpdatePasswordRequest) returns (SuccessfulChangeReply);
  rpc UpdateEmail (UpdateEmailRequest) returns (SuccessfulChangeReply);
  rpc UpdateBirthday (UpdateBirthdayRequest) returns (SuccessfulChangeReply);
  rpc UpdateAccount (UpdateAccountRequest) returns (SuccessfulChangeReply);
  rpc GetAllUsernames (Empty) returns (Usernames);
  rpc GetUsernameByEmail (EmailRequest) returns (UsernameReply);
  rpc VerifySecurityQuestion (SecurityQuestionCheckRequest) returns (SecurityCheckReply);
  rpc ResetPassword (ResetPasswordRequest) returns (SuccessfulChangeReply);
  rpc GetAccountProfile (GetUserAccount) returns (AccountInfo);
}

message CreateAccountRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string birthday = 4;
  repeated string securityAnswers = 5; // Indexed by question number
}

message CreateAccountReply {
  bool success = 1;
  string message = 2;
  int64 messageType = 3;
}

message GetAccountRequest {
  string username = 1;
  string password = 2;
}

message ReturnAccountReply {
  string message = 1;
  bool correctAccountCredentials = 2;
  int64 messageType = 3;
}

message UpdateUsernameRequest {
  string username = 1;
}

message UpdatePasswordRequest {
  string password = 1;
}

message UpdateEmailRequest {
  string email = 1;
}

message UpdateBirthdayRequest {
  string birthday = 1;
}

message UpdateAccountRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string birthday = 4;
  string newusername = 5;
}

message Usernames {
  repeated string usernames = 1;
}

message Empty {}

message EmailRequest {
  string email = 1;
}

message UsernameReply {
  string username = 1;
  bool found = 2;
}

message SecurityQuestionCheckRequest {
  string username = 1;
  int64 securityQuestion = 2; // Index of the default question list
  string securityAnswer = 3;
}

message SecurityCheckReply {
  bool verified = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string username = 1;
  string newPassword = 2;
}

message SuccessfulChangeReply {
  bool success = 1;
}

message GetUserAccount {
  string username = 1;
}

message AccountInfo {
  string username = 1;
  string email = 2;
  string birthday = 3;
  bool updated = 4;
}